--- a/src/Components/list.css
+++ b/src/Components/list.css
@@ -2,3 +2,10 @@
   margin-bottom: 10px;
   margin-right: 5px;
 }
+
+.delete-button {
+  width: 25px;
+  margin-bottom: 10px;
+  /* margin-right: 5px; */
+  margin-left: 10px;
+}
