create a base ui template for the app - Add a base template to the app with material ui grid system
- test the grig with a new component (Navigation Bar) just display NavigationBar on screen.

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,12 @@
 }
 
 .user-input {
-  width: 180px;
-  margin: auto;
+  width: auto;
+  margin: 21px auto 21px auto;
+}
+
+.input-element {
+  padding: auto;
 }
 
 .counters-container {
