--- a/src/App.css
+++ b/src/App.css
@@ -2,24 +2,11 @@ body {
   margin: 0px;
 }
 
-.app-title {
-  text-align: center;
-}
-
-.container {
+.counters-container {
   display: flex;
-  margin: auto;
 }
 
 .user-input {
-  width: auto;
-  margin: 21px auto 21px auto;
-}
-
-.input-element {
-  padding: auto;
-}
-
-.counters-container {
   display: flex;
+  justify-content: center;
 }
