--- a/src/Components/list.css
+++ b/src/Components/list.css
@@ -1,9 +1,16 @@
-.item {
+.list-items {
+  margin: 5px 5px;
+}
+
+input {
+  margin: 5px 5px;
+}
+
+.input-items {
+  margin: 5px 5px;
 }
 
 .delete-button {
   width: 25px;
-  margin-bottom: 10px;
-  /* margin-right: 5px; */
-  margin-left: 10px;
+  margin: 5px 5px;
 }
