--- a/src/Components/list.css
+++ b/src/Components/list.css
@@ -1,13 +1,13 @@
 .list-items {
-  margin: 5px 5px;
+  /* margin: 5px 5px; */
 }
 
 input {
-  margin: 5px 5px;
+  /* margin: 5px 5px; */
 }
 
 .input-items {
-  margin: 5px 5px;
+  /* margin: 5px 5px; */
 }
 
 .delete-button {
