change buttons ui

--- a/src/Components/counter.css
+++ b/src/Components/counter.css
@@ -7,7 +7,7 @@ label {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  background-color: yellowgreen;
+  /* background-color: yellowgreen; */
 }
 
 .counter-label-typography {
